		Attendance: added ability to set partial per-class future absence
		Attendance: added visual graphing for school-wide Attendance Trends
		Attendance: improved the display of Classes/Roll Groups Not Registered to include visual overview
		Attendance: updated Daily Incomplete Email CLI script to include attendance by class
		Attendance: colspan fix in attendance report for roll groups
		Departments: added course long name to header of Class page
		Departments: fixed errant translation preventing Class page details from showing in some languages (e.g. Spanish, French)
		Departments: included participants in Class page, rather than as a subpage.
		Finance: removed thousand separator from invoice bulk export
		Finance: switched from JS to HTML for fee block placeholders
		Finance: added option to output name on invoice/receipt as student official name, rather than preferredName+surname
		Individual Needs: added template settings for pre-filling fields on new IEPs
		Individual Needs: fixed permission issue on summary page
		Library: reduced memory usage of Library browse page
		Markbook: added settings to enable/disable Effort and Rubrics
		Markbook: fixed bug preventing Learning Area rubric selection when course is associated with multiple year groups
		Markbook: removed Learning Area rubrics from multiple column add
		Markbook: fixed return and presetting of fields when landing on add page from Planner
		Markbook: made target scale selectable (so not constained to Default Assessment Scale)
		Markbook: fixed issue preventing some staff from seeing Markbook columns from other classes (depending on Edit rights)
		Markbook: added a class chooser to the sidebar for view, edit and weightings sub-pages
		Messenger: fixed formatting of Sent From Gibbon tag
		Messenger: fixed display of email/SMS report for recipients with , in their name
		Messenger: disabled Canned Response for any non-staff users
		Messenger: doubled character limit on subject field